--- a/models/gemma-3-4b-it/genai_config.json
+++ b/models/gemma-3-4b-it/genai_config.json
@@ -48,7 +48,7 @@
         "no_repeat_ngram_size": 0,
         "num_beams": 1,
         "num_return_sequences": 1,
-        "past_present_share_buffer": true,
+        "past_present_share_buffer": false,
         "repetition_penalty": 1.0,
         "temperature": 1.0,
         "top_k": 1,
